# myPratice

./: .gitignore  README.md
AtOffer/: README.md
AtOffer/src/: GreatestSumOfSubArray.java
AtOffer/src/java/: NoOrderArrayMedium.java
AtOffer/src/java/lintcode/: A.java  Solution1.java  Solution10.java  Solution11.java  Solution12.java  Solution13.java  Solution14.java  Solution15.java  Solution16.java  Solution17.java  Solution4.java  Solution6.java  Solution8.java  Solution9.java
AtOffer/src/java/offer/: Problem03.java  Problem03_2.java  Problem04.java  Problem05.java  Problem06.java  Problem07.java  Problem08.java  Problem09.java  Problem10.java  Problem10_1.java  Problem10_2.java  Problem10_3.java  Problem11.java  Problem12.java  Problem13.java  Problem15.java  Problem16.java  Problem17.java  Problem18.java  Problem18_2.java  Problem19.java  Problem20.java  Problem21.java  Problem22.java  Problem23.java  Problem24.java  Problem25.java  Problem26.java  Problem27.java  Problem28.java  Problem29.java  Problem30.java  Problem31.java  Problem32.java  Problem32_1.java  Problem32_2.java  Problem33.java  Problem34.java  Problem35.java  Problem36.java  (+29 more)
AtOffer/src/java/sort/: heapSort.java  mergeS.java  quickSort.java  topk.java
CProgrammingLanguage/Chapter4/: 4-2.c  exercise.4.12.c  exercise.4.14.c  exercise.4.4.c  exercise.4.6.c  exercise.4.7.c  exercise.4.8.c  exercise.4.9.c
IntroductionToAlgorithms2/java/Chapter15-DynamicProgrammning/: CoinChange.java  MatrixChainMultiplication.java
LC/AtOffer/src/: GreatestSumOfSubArray.java
LC/AtOffer/src/java/lintcode/: A.java  Solution1.java  Solution10.java  Solution11.java  Solution12.java  Solution13.java  Solution14.java  Solution15.java  Solution16.java  Solution17.java  Solution4.java  Solution6.java  Solution8.java  Solution9.java
LC/AtOffer/src/java/offer/: Problem03_2.java  Problem04.java  Problem05.java  Problem06.java  Problem07.java  Problem08.java  Problem09.java  Problem10.java  Problem10_1.java  Problem10_2.java  Problem10_3.java  Problem11.java  Problem12.java  Problem13.java  Problem15.java  Problem16.java  Problem17.java  Problem18.java  Problem18_2.java  Problem19.java  Problem20.java  Problem21.java  (+46 more)
LC/cpp/: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_bk.txt  README.md  gen-cmake.py  main.cpp
LC/cpp/src/: test.cmakeFIle
LC/cpp/src/DP/: CMakeLists.txt  Problem5142.cpp  README.md  largestSumOfAverage.cpp
LC/cpp/src/array/: CMakeLists.txt  profile31.cpp
LC/cpp/src/hotel/: hotelManageSystem.c  hotelManageSystem.h
LC/cpp/src/linkedList/: linkedList.c
LC/cpp/src/other/: CMakeLists.txt  HotelManageSystem.cpp  README.md  guest.h  hotelManageSystem.c  hotelManageSystem.h  hotelManageSystem1.c  hotelManageSystem2.cpp  hotelManageSystem3.cpp
LC/java/: README.md
LC/java/dp/: README.md
LC/java/pkg/ywj/: Solution76.java
LC/java/str/: README.md
LC/old/: README.md  Solution216.java  Solution217.java  Solution30.java  Solution32.java  Solution37.java  Solution40.java  Solution44.java  Solution46.java  Solution47.java  Solution51.java  Solution53.java  Solution54.java  Solution55.java  Solution57.java  Solution58.java  Solution59.java  Solution61.java
LC/old/Array/: Solution1.java  Solution16.java  Solution18.java  Solution66.java
LC/old/BinarySearch/: Solution4.java  Solution50.java
LC/old/DynimicProgramming/: Solution10.java  Solution121.java  Solution188.java  Solution63.java  Solution70.java
LC/old/Greedy/: Solution122.java
LC/old/LinkedList/: Solution19.java  Solution24.java  Solution83.java  Solution92.java
LC/old/Math/: Solution2.java  Solution9.java
LC/old/String/: Solution14.java  Solution17.java  Solution20.java  Solution22.java  Solution8.java
LC/old/TwoPointers/: Solution28.java
LC/python/: README.md
LC/python/dp/: README.md  largestSumOfAverages.py
LC/python/strings/: CompareVersions.py  README.md  ValidateIPAddress.py  strCompression.py
LeetCode/java/: README.md  Solution31.java  Solution34.java  Solution35.java  Solution36.java  Solution39.java  Solution41.java  Solution42.java  Solution45.java  Solution48.java  Solution49.java  Solution52.java  Solution64.java
LeetCode/java/Array/: Solution1.java  Solution26.java  Solution27.java  Solution62.java
LeetCode/java/Backtracking/: Solution79.java  Solution89.java
LeetCode/java/BinarySearch/: Solution29.java  Solution33.java
LeetCode/java/DynimicProgramming/: Solution123.java  Solution5.java
LeetCode/java/LinkedList/: Solution2.java  Solution21.java  Solution23.java  Solution25.java  Solution82.java
LeetCode/java/Math/: Solution12.java  Solution13.java  Solution43.java  Solution60.java  Solution65.java  Solution67.java  Solution69.java  Solution7.java
LeetCode/java/String/: Solution3.java  Solution38.java  Solution6.java
LeetCode/java/TwoPointers/: Solution11.java  Solution15.java  Solution3.java
NK/com/mi/: README.md  Solution2015_1.java
course/CProgrammingLanguage/Chapter4/: 4-1.c  exercise.4.1.c  exercise.4.10.c  exercise.4.11.c  exercise.4.13.c  exercise.4.2.c  exercise.4.3.c  exercise.4.5.c
course/IntroductionToAlgorithms2/java/Chapter15-DynamicProgrammning/: AssemblyLineScheduler.java  LCS.java  OptimalBinarySearchTree.java  exercise.txt
(+57 files in other folders)
